<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/darkblue_bg1"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/header"
        android:textSize="50sp"
        android:textColor="#005AEF"
        android:layout_gravity="center"
        android:textStyle="bold"
        android:layout_marginTop="20dp"/>

    <ImageView
        android:layout_width="110dp"
        android:layout_height="110dp"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:src="@drawable/account_icon"/>

    <EditText
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:hint="@string/username"
        android:textColor="@color/white"
        android:textColorHint="#5290FA"
        android:textSize="20sp"
        android:background="@drawable/rounded_corner"
        android:padding="18dp"
        android:layout_gravity="center"
        android:inputType="text"
        android:backgroundTint="#0341BC"
        android:id="@+id/username_input"/>

    <EditText
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:hint="@string/password"
        android:textColor="@color/white"
        android:textColorHint="#5290FA"
        android:textSize="20sp"
        android:background="@drawable/rounded_corner"
        android:padding="18dp"
        android:layout_gravity="center"
        android:inputType="textPassword"
        android:backgroundTint="#0341BC"
        android:id="@+id/password_input"/>

    <Button
        android:layout_width="250dp"
        android:layout_height="60dp"
        android:text="@string/login"
        android:backgroundTint="#2701FF"
        android:textColor="@color/black"
        android:layout_marginTop="55dp"
        android:textSize="20sp"
        android:gravity="center"
        android:layout_gravity="center"
        android:id="@+id/login_btn"/>


</LinearLayout>